[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pollen_datasets"
version = "0.0.0"
description = "Dataset classes for SwissPoleno dataset in PyTorch"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name="SimonLuder", email="simon.luder@students.fhwn.ch" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "Pillow>=9.5.0",
    "torch>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/SimonLuder/Pollen_Datasets"