[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pollen_datasets"
version = "0.0.3"
description = "Dataset classes for SwissPoleno dataset in PyTorch"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name="SimonLuder", email="simon.luder@students.fhwn.ch" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "Pillow",
    "torch",
]

[project.urls]
Homepage = "https://github.com/SimonLuder/Pollen_Datasets"